--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,5 +16,13 @@
 	<script type="text/javascript" src="/src/js/service.js"></script>
 	<script type="text/javascript" src="/src/pages/todo/details/js/todoDetail.controller.js"></script>
 	<script type="text/javascript" src="/src/pages/todo/list/js/todoList.controller.js"></script>
+	<script type="text/javascript" src="/src/pages/todo/delete/js/todoDelete.controller.js"></script>
+	<script type="text/javascript" src="/src/pages/todo/insert/js/todoPut.controller.js"></script>
+	<script type="text/javascript" src="/src/pages/todo/update/js/todoUpdate.controller.js"></script>
+
+
+
+
+
 </body>
 </html>
